implement model training accelaration for gpu

--- a/dl-experiments/baseline_model.ipynb
+++ b/dl-experiments/baseline_model.ipynb
@@ -43,6 +43,7 @@
    ],
    "source": [
     "import os, numpy as np, tensorflow as tf, json, matplotlib.pyplot as plt\n",
+    "from tensorflow import keras\n",
     "from data_loader.hgf_export import HGFresource\n",
     "from dotenv import load_dotenv"
    ]
@@ -141,19 +142,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential(\n",
-    "    [\n",
-    "        tf.keras.layers.Conv2D(16, (3, 3), activation='relu', input_shape=INPUT_SHAPE),\n",
-    "        tf.keras.layers.MaxPooling2D(pool_size=(2, 2)),\n",
-    "        tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
-    "        tf.keras.layers.MaxPooling2D(pool_size=(2, 2)),\n",
-    "        tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
-    "        tf.keras.layers.MaxPooling2D(pool_size=(2, 2)),\n",
-    "        tf.keras.layers.Flatten(),\n",
-    "        tf.keras.layers.Dense(128, activation='relu'),\n",
-    "        tf.keras.layers.Dense(N_CLASSES, activation='softmax')\n",
-    "    ]\n",
-    ")"
+    "inputs = keras.Input(shape=(256, 219, 3))\n",
+    "conv1 = keras.layers.Conv2D(16, (3, 3), activation='relu')(inputs)\n",
+    "maxpool1 = keras.layers.MaxPool2D(pool_size=(2, 2), padding='same')(conv1)\n",
+    "conv2 = keras.layers.Conv2D(32, (3, 3), activation='relu')(maxpool1)\n",
+    "maxpool2 = keras.layers.MaxPool2D(pool_size=(2, 2))(conv2)\n",
+    "conv3 = keras.layers.Conv2D(64, (3, 3), activation='relu')(maxpool2)\n",
+    "maxpool3 = keras.layers.MaxPool2D(pool_size=(2, 2))(conv3)\n",
+    "flat = keras.layers.Flatten()(maxpool3)\n",
+    "dense = keras.layers.Dense(128, activation='relu')(flat)\n",
+    "outputs = keras.layers.Dense(N_CLASSES, activation='softmax')(dense)\n",
+    "model = keras.Model(inputs=inputs, outputs=outputs)\n",
+    "model.summary()"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
