--- a/dl-experiments/data_augmentation.ipynb
+++ b/dl-experiments/data_augmentation.ipynb
@@ -31,6 +31,8 @@
     "else:\n",
     "    from data_loader.hgf_export import HGFresource\n",
     "\n",
+    "from model_accelerator.custom_loop import CustomModel\n",
+    "from model_accelerator.utils import functional_model_from_config\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -185,7 +187,8 @@
    ],
    "source": [
     "# initialize the baseline model architecture\n",
-    "model = tf.keras.Sequential.from_config(model_config)\n",
+    "inputs, outputs = functional_model_from_config(model_config)\n",
+    "model = CustomModel(inputs=inputs, outputs=outputs)\n",
     "# view the model architecture\n",
     "model.summary()"
    ]
@@ -198,7 +201,10 @@
    },
    "outputs": [],
    "source": [
-    "model.compile(loss=LOSS,metrics=METRICS)"
+    "model.compile(\n",
+    "    loss=LOSS,\n",
+    "    metrics=METRICS\n",
+    ")"
    ]
   },
   {
@@ -407,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
