update server script

--- a/flower-ec2/t.ipynb
+++ b/flower-ec2/t.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, fileinput\n",
+    "import os\n",
     "from dotenv import load_dotenv\n",
-    "from ec2_management.ec2_manager import EC2Client"
+    "from ec2_management.ec2_manager import EC2Manager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = EC2Client(\n",
+    "manager = EC2Manager(\n",
     "    aws_access_key=AWS_ACCESS_KEY,\n",
     "    aws_secret_access_key=AWS_SECRET_ACCESS_KEY,\n",
     "    aws_session_token=AWS_SESSION_TOKEN,\n",
@@ -42,27 +42,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'warning': 'rule already created, skipping action'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# add rule to the default security group to open port 8080\n",
-    "client.open_port(default_group=True, port_number=8080)"
+    "# add rule to the default security group to open port 8080 and 22\n",
+    "manager.open_port(default_group=True, port_number=8080)\n",
+    "manager.open_port(default_group=True, port_number=22)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# with open('flower-dependencies/server/server_startup.txt', 'r') as f:\n",
+    "#     server_startup_script = f.read()\n",
+    "server_startup_script = \"\"\"#!/bin/bash\n",
+    "set -x\n",
+    "sudo yum -y install python3-pip\n",
+    "sudo yum -y install git\n",
+    "cd /home/ec2-user\n",
+    "git clone --depth 1 --filter=blob:none --no-checkout https://github.com/fedorTurchenko18/dsc-515.git\n",
+    "cd dsc-515/\n",
+    "git sparse-checkout init --cone\n",
+    "git sparse-checkout set flower-ec2/flower-dependencies/server\n",
+    "git checkout\n",
+    "cd flower-ec2/flower-dependencies/server\n",
+    "while read -r package; do\n",
+    "    pip install \"$package\"\n",
+    "done < requirements.txt\n",
+    "python3 server.py\"\"\"\n",
     "# create and run the server ec2 instance\n",
-    "flower_server = client.create_instance('server', startup_script_path='flower-dependencies/server/server_startup.txt')"
+    "flower_server = manager.create_instance('server', startup_script=server_startup_script)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = manager.client.describe_instances(InstanceIds=[flower_server[0].instance_id])\n",
+    "# Extract the public IP address from the response\n",
+    "server_public_ip_address = response['Reservations'][0]['Instances'][0]['PublicIpAddress']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +110,11 @@
     "with open('flower-dependencies/client/client_startup.txt', 'r') as f:\n",
     "    client_startup_script = [line for line in f.readlines()]\n",
     "# modify the line\n",
-    "client_startup_script = [line.replace(line[line.find('= ')+len('= '):line.find('\\\\')], flower_server.public_ip_address) for line in client_startup_script]\n",
+    "client_startup_script = [\n",
+    "    line.replace(line[line.find('=')+len('='):line.find('\\\\')], server_public_ip_address) \\\n",
+    "        if 'export PUBLIC_IP' in line else line \\\n",
+    "            for line in client_startup_script\n",
+    "]\n",
     "# write new version of the script\n",
     "with open('flower-dependencies/client/client_startup.txt', 'w') as f:\n",
     "    f.writelines(client_startup_script)"
@@ -83,7 +127,8 @@
    "outputs": [],
    "source": [
     "# create and run the clients ec2 instances\n",
-    "flower_clients = client.create_instance('clients', startup_script_path='flower-dependencies/client/client_startup.txt', n_instances=2)"
+    "client_startup_script_path = os.path.abspath('flower-dependencies/server/client_startup.txt')\n",
+    "flower_clients = manager.create_instance('clients', startup_script_path=client_startup_script_path, n_instances=2)"
    ]
   },
   {
@@ -119,7 +164,7 @@
     }
    ],
    "source": [
-    "client.terminate_instance(instance_ids=[i['InstanceId'] for i in flower_clients['Instances']])"
+    "manager.terminate_instance(instance_ids=[i['InstanceId'] for i in flower_clients['Instances']])"
    ]
   },
   {
